crates/aviutl2-macros/src/snapshots/aviutl2_macros__generic_menus__tests__unwind_meta.snap
---
source: crates/aviutl2-macros/src/generic_menus.rs
expression: format_tokens(output)
---
impl MyPlugin {
    fn export_menu(&mut self, edit: &mut ::aviutl2::generic::EditSection) -> Result<(), ()> {
        let _ = edit;
        Ok(())
    }
}
::aviutl2::__internal_module! {
    impl ::aviutl2::generic::GenericPluginMenus for MyPlugin {
        fn register_menus(host: &mut ::aviutl2::generic::HostAppHandle) {
            host.register_export_menu("MyExport", bridge_export_menu);
            return;
            extern "C" fn bridge_export_menu(edit: *mut ::aviutl2::sys::plugin2::EDIT_SECTION) {
                if let Err(panic_info) = ::aviutl2::__catch_unwind_with_panic_info(|| {
                    let mut edit = unsafe { ::aviutl2::generic::EditSection::from_raw(edit) };
                    <MyPlugin as ::aviutl2::generic::GenericPlugin>::with_instance_mut(|__self| {
                        let ret = <MyPlugin>::export_menu(__self, &mut edit);
                        ::aviutl2::generic::__output_log_if_error(ret);
                    });
                }) {
                    ::aviutl2::log::error!(
                        "Panic occurred during {}: {}",
                        "export_menu",
                        panic_info
                    );
                    ::aviutl2::__alert_error(&panic_info);
                }
            }
        }
    }
}
